client/src/components/forms/authForm.scss
@use '../../sass/abatracts/' as *; 
.authPage {
    padding-top: 40px;
    height: 100vh;
    background-color: $authPageBackground;
}

.authForm{
    position: relative;
    margin: 0 auto;
    background-color: $authFormBackground;
    padding: $authFormPadding;
    max-width: $authFormMaxWidth;
    box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);

    .form-group{
        margin-bottom: 1rem;
    }

    button[type="submit"]{
        width: 100%;
    }

    &__header{
        height: 100px;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        text-align: center;
        background-color: blue;
        color: white;
        border-radius: 0% 0% 50% 50% / 0% 0% 12% 12%;
        padding: 20px;
    }

    &__body{
        padding-top: 100px;
    }

    &__foot{
        display: flex;
        margin-top: 30px;
        flex-direction: column;
        align-items: center;
        border-top: 1px solid lightgrey;
    }

    .foot-item{
        margin-top: 10px;
    }
}

